--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Default</title>
+    <title>El Pollo Loco</title>
 
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./styles/standard.css" />
     <link rel="stylesheet" href="./styles/assets.css" />
     <link rel="stylesheet" href="./styles/assets-bold-colours.css" />
-    <link rel="icon" href="./assets/icons/logo.png" />
+    <link rel="icon" href="./assets/img/8_coin/coin_1.png"" />
     <script src="./scripts/utils.js"></script>
     <script src="./scripts/templates.js"></script>
     <script src="./script.js"></script>
   </head>
   <body onload="init()">
     <header id="header">
-      <img class="logo" src="./assets/icons/logo.png" alt="Logo" />
-      <h1>Default</h1>
+      <img class="logo" src="./assets/img/8_coin/coin_1.png" alt="Logo" />
+      <h1>El Pollo Loco</h1>
     </header>
     <div id="overlay" class="dnone"></div>
     <section id="main">
