--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
   </head>
   <body onload="init()">
     <header id="header">
-      <img class="logo" src="./assets/img/8_coin/coin_1.png" alt="Logo" />
       <h1>El Pollo Loco</h1>
     </header>
     <div id="overlay" class="dnone"></div>
     <section id="main">
-
+      <canvas class="canvas"></canvas>
     </section>
 
     <footer id="footer">
