--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>El Pollo Loco</title>
 
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/standard.css" />
     <link rel="stylesheet" href="./styles/assets.css" />
     <link rel="icon" href="./assets/img/8_coin/coin_1.png"" />
     <script src="./scripts/utils.js"></script>
     <script src="./scripts/templates.js"></script>
-    <script src="./script.js"></script>
+    <script src="./scripts/game.js"></script>
   </head>
   <body onload="init()">
     <header id="header">
@@ -19,7 +19,7 @@
     </header>
     <div id="overlay" class="dnone"></div>
     <section id="main">
-      <canvas class="canvas"></canvas>
+      <canvas id="canvas"></canvas>
     </section>
 
     <footer id="footer">
