--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/standard.css" />
     <link rel="stylesheet" href="./styles/assets.css" />
-    <link rel="icon" href="./assets/img/8_coin/coin_1.png"" />
+    <link rel="icon" href="./assets/img/8_coin/coin_1.png" />
     <script src="./scripts/utils.js"></script>
     <script src="./scripts/templates.js"></script>
     <script src="./scripts/game.js"></script>
