--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="./scripts/utils.js"></script>
     <script src="./scripts/templates.js"></script>
     <script src="./models/world.class.js"></script>
+    <script src="./models/cloud.class.js"></script>
     <script src="./models/movable-object.class.js"></script>
     <script src="./models/character.class.js"></script>
     <script src="./models/chicken.class.js"></script>
