--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <link rel="icon" href="./assets/img/8_coin/coin_1.png" />
     <script src="./scripts/utils.js"></script>
     <script src="./scripts/templates.js"></script>
-    <script src="./models/world.class.js"></script>
-    <script src="./models/cloud.class.js"></script>
     <script src="./models/movable-object.class.js"></script>
+    <script src="./models/world.class.js"></script>
+    <script src="./models/background-object.class.js"></script>
+    <script src="./models/cloud.class.js"></script>
     <script src="./models/character.class.js"></script>
     <script src="./models/chicken.class.js"></script>
     <script src="./scripts/game.js"></script>
