--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" href="./assets/img/8_coin/coin_1.png" />
     <script src="./scripts/utils.js"></script>
     <script src="./scripts/templates.js"></script>
+    <script src="./models/keyboard.class.js"></script>
     <script src="./models/movable-object.class.js"></script>
     <script src="./models/world.class.js"></script>
     <script src="./models/background-object.class.js"></script>
