Cleaned up code formatting

--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
       <canvas id="canvas"></canvas>
     </section>
 
-    <footer id="footer">
-
-    </footer>
+    <footer id="footer"></footer>
   </body>
 </html>
