--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <script src="./scripts/utils.js"></script>
     <script src="./scripts/templates.js"></script>
     <script src="./models/keyboard.class.js"></script>
+    <script src="./models/drawable-object.class.js"></script>
+    <script src="./models/statusbar.class.js"></script>
     <script src="./models/movable-object.class.js"></script>
     <script src="./models/background-object.class.js"></script>
     <script src="./models/cloud.class.js"></script>
