--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <script src="./scripts/templates.js"></script>
     <script src="./models/keyboard.class.js"></script>
     <script src="./models/drawable-object.class.js"></script>
-    <script src="./models/statusbar.class.js"></script>
+    <script src="./models/status-bar.class.js"></script>
+    <script src="./models/health-bar.class.js"></script>    
     <script src="./models/movable-object.class.js"></script>
     <script src="./models/background-object.class.js"></script>
     <script src="./models/cloud.class.js"></script>
