--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <script src="./models/movable-object.class.js"></script>
     <script src="./models/background-object.class.js"></script>
     <script src="./models/cloud.class.js"></script>
+    <script src="./models/chicken-base.class.js"></script>
     <script src="./models/chicken.class.js"></script>
+    <script src="./models/mutant-chicken.class.js"></script>
     <script src="./models/endboss.class.js"></script>
     <script src="./models/character.class.js"></script>
     <script src="./models/throwable-object.class.js"></script>
