--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <script src="./models/boss-bar.class.js"></script>
     <script src="./models/bottle-bar.class.js"></script>
     <script src="./models/coin-bar.class.js"></script>    
-
     <script src="./models/cloud.class.js"></script>
     <script src="./models/chicken-base.class.js"></script>
     <script src="./models/chicken.class.js"></script>
@@ -29,6 +28,7 @@
     <script src="./models/endboss.class.js"></script>
     <script src="./models/character.class.js"></script>
     <script src="./models/bottle.class.js"></script>
+    <script src="./models/coin.class.js"></script>
     <script src="./models/throwable-object.class.js"></script>
     <script src="./models/level.class.js"></script>
     <script src="./levels/level1.js"></script>
