Added basics of overlays

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
     <header id="header">
       <h1>El Pollo Loco</h1>
     </header>
-    <div id="overlay" class="dnone"></div>
+    <div id="overlay-portrait" class="overlay dnone"></div>
+    <div id="overlay-start" class="overlay dnone"></div>
+    <div id="overlay-gameover" class="overlay dnone"></div>
+    <div id="overlay-victory" class="overlay dnone"></div>
     <section id="main">
       <canvas id="canvas"></canvas>
     </section>
