--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
       </div>
     </div>
     <div id="overlay-gameover" class="overlay dnone">
-      <p>GAVE OVER</p>
+      <h1>GAVE OVER</h1>
       <div class="restart-buttons">
         <button id="restart-button" class="button" onclick="restartGame()">Restart</button>
         <button id="exit-button" class="button" onclick="exitGame()">Home</button>
       </div>
     </div>
     <div id="overlay-victory" class="overlay dnone">
-      <p>VICTORY!</p>
+      <h1>VICTORY!</h1>
       <p>Score: </p>
       <div class="restart-buttons">
         <button id="restart-button" class="button" onclick="restartGame()">Restart</button>
-        <button id="exit-button" class="button" onclick="exitGame()">Home</button>
+        <button id="exit-button" class="button" onclick="exitGame()">Exit</button>
       </div>
     </div>
     <section id="main">
