--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <h1>GAVE OVER</h1>
       <div class="restart-buttons">
         <button id="restart-button" class="button" onclick="restartGame()">Restart</button>
-        <button id="exit-button" class="button" onclick="exitGame()">Home</button>
+        <button id="exit-button" class="button" onclick="exitGame()">Exit</button>
       </div>
     </div>
     <div id="overlay-victory" class="overlay dnone">
