Added BGM upon startup; implemented mute function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="./scripts/utils.js"></script>
     <script src="./scripts/templates.js"></script>
     <script src="./models/keyboard.class.js"></script>
-    <script src="./models/sound.class.js"></script>
+    <script src="./models/audio-hub.class.js"></script>
     <script src="./models/drawable-object.class.js"></script>
     <script src="./models/movable-object.class.js"></script>
     <script src="./models/background-object.class.js"></script>
@@ -65,7 +65,7 @@
       </div>
     </div>
     <div id="overlay-gameover" class="overlay dnone">
-      <h1>GAVE OVER</h1>
+      <h1>GAME OVER</h1>
       <div class="restart-buttons">
         <button id="restart-button" class="button" onclick="restartGame()">Restart</button>
         <button id="exit-button" class="button" onclick="exitGame()">Exit</button>
