Edited control instructions

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <button id="start-button" class="button" onclick="startGame()">Start Game</button>
         <div class="controls hidedesktop">
           <h3>Controls</h3>
-          <p>Move: Arrow Left/Right</p>
-          <p>Jump: Arrow Up</p>
-          <p>Throw: Space</p>
+          <p>Move: ←/→</p>
+          <p>Jump: ↑</p>
+          <p>Throw: 💥</p>
         </div>
         <div class="controls hidemobile">
           <h3>Controls</h3>
-          <p>Move: Arrow Left/Right</p>
-          <p>Jump: Arrow Up</p>
+          <p>Move: ←/→</p>
+          <p>Jump: ↑</p>
           <p>Throw: Space</p>
         </div>
         <div class="link-box">
