Added coin score on the victory screen

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
     <div id="overlay-victory" class="overlay dnone">
       <h1>VICTORY!</h1>
-      <p>Score:</p>
+      <p>Coin score: <span id="victory-score">0</span></p>
       <div class="restart-buttons">
         <button id="restart-button" class="button" onclick="restartGame()">Restart</button>
         <button id="exit-button" class="button" onclick="exitGame()">Exit</button>
