Gave imprint and privacy policy plain dark background

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -11,14 +11,14 @@
     <link rel="icon" href="./assets/img/8_coin/coin_1.png" />
     <script src="./scripts/utils.js"></script>
   </head>
-  <body onload="init()">
+  <body class="body-plain" onload="init()">
     <header id="header">
       <h1>El Pollo Loco</h1>
       <button id="mute-button" class="button">Mute</button>
     </header>
     <section id="main" class="main-dark">
      <div class="plain-text policy">
-        <h1>Privacy Policy</h1>
+        <h3>Privacy Policy</h3>
         <h3 id="m716">Preamble</h3>
         <p>With the following privacy policy, we would like to inform you about which types of your personal data (hereinafter also referred to as "data") we process for which purposes and to what extent. This privacy policy applies to all processing of personal data carried out by us, both in the context of providing our services and in particular on our websites, in mobile applications, and within external online presences, such as our social media profiles (hereinafter collectively referred to as "online offering").</p>
         <p>The terms used are not gender-specific.</p>
@@ -131,10 +131,11 @@
         <p><strong>Note on the use of cookies:</strong> Cookies are small text files that are stored on your device when you visit our website. They help us to improve your experience on our site and to provide you with relevant content. You can manage your cookie preferences in your browser settings.</p>
         <br>
         <a href="https://datenschutz-generator.de/" title="Legal text by Dr. Schwenke - click for more information." class="external-link">Created with the free privacy policy generator by Dr. Thomas Schwenke <span class="sr-only"> (opens in a new tab)</span></a>
-
-      </div>
+      <br>
+      <br>
         <a href="./index.html">Home</a><br>
         <a href="./imprint.html">Imprint</a>
+        </div>
       </p>
     </section> 
 
