--- a/imprint.html
+++ b/imprint.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="./assets/img/8_coin/coin_1.png" />
     <script src="./scripts/utils.js"></script>
   </head>
-  <body onload="init()">
+  <body class="body-plain" onload="init()">
     <header id="header">
       <h1>El Pollo Loco</h1>
       <button id="mute-button" class="button">Mute</button>
